--- a/Date_Library/Date_Library.vcxproj.filters
+++ b/Date_Library/Date_Library.vcxproj.filters
@@ -23,5 +23,11 @@
     <ClInclude Include="clsDate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="clsString.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="clsChar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
